tests/samples/positive/core/local_shadow_outer_local.ax
module local_shadow_outer_local;

fn main() -> i32 {
    let value = 1;
    {
        let value = 41;
        if value != 41 {
            return 1;
        }
    }
    return value - 1;
}
