tests/samples/negative/pattern_matching/match_literal_missing_wildcard.ax
module match_literal_missing_wildcard;

fn main() -> i32 {
    return match 1 {
        1 => 10,
    };
}
